--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </div>
 </figure>
 <!--Emoji section-->
-<button class="fun" data-toggle="collapse" data-target="#emoji">See some crazy celebrations</button>
+<!--<button class="fun" data-toggle="collapse" data-target="#emoji">See some crazy celebrations</button>
  <div id="emoji" class="collapse">
     <div class="container-fluid padding">
         <div class="row text-center">
@@ -185,6 +185,7 @@
     </div>
  </div>
  </div>
+-->
  <!--Meet the Team-->
  <div class="container-fluid padding">
     <div class="row welcome text-center">
